--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://vszhub.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
-cover_image: /bg.jpeg
+cover_image: /23.jpg
 
 # Gems
 plugins:
