--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Not Pure Poole
 description: A simple, beautiful, and powerful Jekyll theme for blogs
 url: https://vszhub.github.io
-avatar: /avatar.jpeg
+avatar: /IMG_4405.jpg
 paginate: 5
 permalink: pretty
 cover_image: /23.jpg
