--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
+title: Hola! this is Joy
+description: ʕ •ᴥ•ʔ
 url: https://vszhub.github.io
-avatar: /IMG_4405.jpg
+avatar: /IMG_4405.JPG
 paginate: 5
 permalink: pretty
 cover_image: /23.jpg
