--- a/_config.yml
+++ b/_config.yml
@@ -29,14 +29,14 @@ exclude:
 
 # Optimize Jekyl SEO Tag
 twitter:
-  username: vszhub
+  username:
   card: summary
 logo: logo.png
 social:
-  name: Songzi Vong
+  name: Joy Luo
   links:
-    - https://twitter.com/vszhub
-    - https://github.com/vszhub
+    - https://twitter.com/
+    - https://github.com/joy3luo
 google_site_verification: xxxxx
 lang: en
 
@@ -47,13 +47,13 @@ sass:
 # Options
 
 # Replace this value and uncomment to enable Google Analytics tracking
-# google_analytics: UA-000000-0
+google_analytics: G-TG0XJZG53F
 
 # Replace this value and uncomment to enable Disqus
 # disqus: xxxxxx
 
 # Specify the author for blog posts
 author:
-  name: Songzi Vong
-  url: https://github.com/vszhub/
-  email: vszhub@gmail.com
+  name: Joy Luo
+  url: https://github.com/joy3luo/
+  email: zshyly@gmail.com
