--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Hola! this is Joy
-description: ʕ •ᴥ•ʔ
+description: How are you doing today ( •̀ ᴗ •́ )✧
 url: https://vszhub.github.io
 avatar: /IMG_4405.JPG
 paginate: 5
