--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Hola! this is Joy
 description: How are you doing today ( •̀ ᴗ •́ )✧
-url: https://vszhub.github.io
+url: https://joy3luo.github.io/mathnotes/
 avatar: /IMG_4405.JPG
 paginate: 5
 permalink: pretty
