--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
-- title: Blog
+- title: Categories
   url: https://joy3luo.github.io/mathnotes/tags/
-- title: About
-  url: /about/
+- title: Dates
+  url: https://joy3luo.github.io/mathnotes/dates/
 - title: About
   url: /about/
