--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - title: Categories
-  url: https://joy3luo.github.io/mathnotes/tags/
+  url: /tags/
 - title: Dates
-  url: https://joy3luo.github.io/mathnotes/dates/
+  url: /dates/
 - title: About
   url: /about/
