--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -1,9 +1,9 @@
 - type: dates
   title: Dates
   url: /dates/
-#- type: categories
-#  title: Categories
-#  url: /categories/
+- type: categories2
+  title: Categories2
+  url: /categories2/
 - type: tags
   title: Tags
   url: /tags/
