--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: Hola! this is Joy
 description: How are you doing today ( •̀ ᴗ •́ )✧
 url: https://joy3luo.github.io/mathnotes/
-avatar: /IMG_4405.JPG
+avatar: /pics/IMG_4405.JPG
 paginate: 5
 permalink: pretty
-cover_image: /33.jpg
+cover_image: /pics/33.jpg
 
 # Gems
 plugins:
