--- a/_data/social.yml
+++ b/_data/social.yml
@@ -5,5 +5,5 @@
   url: https://twitter.com/
   icon: fab fa-twitter
 - title: GitHub
-  url: https://github.com/joy3luo/mathnotes
+  url: https://github.com/joy3luo
   icon: fab fa-github
